Update SP files

--- a/src/main/webapp/WEB-INF/views/templates/incident-create.html
+++ b/src/main/webapp/WEB-INF/views/templates/incident-create.html
@@ -101,10 +101,10 @@
                                       <th>1) Access the link : http://52.25.66.108:8585/login </th>
                                     </tr>
                                     <tr>
-                                      <td>2) Use username: ${username} </td>
+                                      <td>2) Username: ${username} </td>
                                     </tr>
-                                    <tr>
-                                      <td>3) Insert your access key: ${secretKey}</td>
+                                     <tr>
+                                      <td>3) Note: If you have forgot your password, write a mail to admin or customer to reset your password. Once password is reset, you will receive new password in your email.  </td>
                                     </tr>
                                   </table>
                                   <hr>
