Updated bug fix and logn page

--- a/src/main/webapp/resources/theme1/css/style4.css
+++ b/src/main/webapp/resources/theme1/css/style4.css
@@ -148,8 +148,8 @@ span {
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+     color: #fff;
+     background: #151723bf;
 }
 
 a[data-toggle="collapse"] {
