--- a/src/main/webapp/resources/theme1/css/optionbtn.css
+++ b/src/main/webapp/resources/theme1/css/optionbtn.css
@@ -6,8 +6,8 @@
     
     .funkyradio label {
       width: 100%;
-      border-radius: 3px;
-      border: 1px solid #D1D3D4;
+         border-radius: 50px;
+    border: 1px solid #3b90bb3d;
       font-weight: normal;
     }
     
@@ -39,7 +39,7 @@
   content: '';
   width: 2.5em;
   background: #D1D3D4;
-  border-radius: 3px 0 0 3px;
+      border-radius: 15px 15px 15px 15px;
 }
 
 .funkyradio input[type="radio"]:hover:not(:checked) ~ label,
