--- a/src/main/webapp/resources/theme1/css/login.css
+++ b/src/main/webapp/resources/theme1/css/login.css
@@ -6,8 +6,7 @@
 .register-left{
     text-align: center;
     color: #fff;
-    margin-top: 0%;
-    background: #000000d9;;
+    margin-top: 4%;
 }
 .register-left input{
     border: none;
@@ -22,12 +21,12 @@
     cursor: pointer;
 }
 .register-right{
-    background: #000000d9;
-     border-top-left-radius: 10% 50%;
-    border-bottom-left-radius: 10% 50%; 
+    background: #f8f9fa;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
 }
 .register-left img{
-    margin-top: 1%;
+    margin-top: 15%;
     margin-bottom: 5%;
     width: 25%;
     -webkit-animation: mover 2s infinite  alternate;
